--- a/project.json
+++ b/project.json
@@ -42,7 +42,16 @@
     "processOptions": {
       "ignoredFiles": []
     },
-    "fileInfoCollection": [],
+    "fileInfoCollection": [
+      {
+        "editingStatus": "InProgress",
+        "testCaseId": "d8d7a359-5a8d-43b9-901c-09925340ba46",
+        "dataVariationFilePath": ".variations\\TestDataExample_Data.json",
+        "testCaseType": "TestCase",
+        "executionTemplateInvokeIsolated": false,
+        "fileName": "TestCase.xaml"
+      }
+    ],
     "modernBehavior": true,
     "saveToCloud": false
   },
